# On-the-Fly-Syntax-Highlighting-Generalisation-and-Speed-ups

./: .gitignore  README.md  build.gradle  environment.yml  gradle.properties
src/main/antlr/: CPP14Lexer.g4  CSharpLexer.g4  CSharpParser.g4  JavaScriptParser.g4
src/main/java/: JavaScriptLexerBase.java  JavaScriptParserBase.java
src/main/kotlin/common/: FileEvalItem.kt  JSONSourceFile.kt  OracleIndexItem.kt  PygmentSolution.kt
src/main/kotlin/evaluator/: CPPEvaluator.kt  CSharpEvaluator.kt  Evaluator.kt  JavaScriptEvaluator.kt  http_server_type.kt
src/main/kotlin/highlighter/: Processor.kt
src/main/kotlin/preprocessor/: Preprocessor.kt
src/main/kotlin/utils/: AntlrUtils.kt
src/main/python/: github_miner.py
src/main/python/highlighter/: cnn.py  evaluator.py  http_server.py  main.py  models.py  (+3 more)
treesitter_servers/treesitter_highlighter_cpp/: Cargo.toml
treesitter_servers/treesitter_highlighter_cpp/src/: main.rs
treesitter_servers/treesitter_highlighter_csharp/: Cargo.toml
treesitter_servers/treesitter_highlighter_csharp/src/: main.rs
treesitter_servers/treesitter_highlighter_java/: Cargo.toml
treesitter_servers/treesitter_highlighter_java/src/: main.rs
treesitter_servers/treesitter_highlighter_javascript/: Cargo.toml
treesitter_servers/treesitter_highlighter_javascript/src/: main.rs
treesitter_servers/treesitter_highlighter_kotlin/: Cargo.toml
treesitter_servers/treesitter_highlighter_kotlin/src/: main.rs
treesitter_servers/treesitter_highlighter_python/: Cargo.toml
treesitter_servers/treesitter_highlighter_python/src/: main.rs
(+490 files in other folders)
