[package]
name = "treesitter_highlighter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter-highlight = "^0.20"
tree-sitter-cpp= "^0.20"
tree-sitter = "^0.20"
actix-web = "4.0"
lazy_static = "1.4.0"
once_cell = "1.9"

